# asynccurl

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: asynccurlConfig.cmake.in
example/: CMakeLists.txt  main.cpp
include/asynccurl/: awaitable_request.h  behave.h  executor.h  request.h  request_slot.h  spwan.h  task.h  thread.h  write_buffer.h
scripts/: vcpkg_install.sh
src/: executor.cpp
